# agent-compounds

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md
.github/workflows/: lint.yml
commands/: README.md  backlog-add.md  backlog-next.md  backlog-strategize.md  backlog-tidy.md  bead-create.md  bead-land.md  bead-refine.md  bead-work.md  beadify.md  hygiene.md  idea-review-genius.md  idea-transcender-alien.md  next.md  pipeline-align.md  pipeline-next.md  plan-clean.md  plan-init.md  plan-refine-external.md  plan-refine-internal.md  plan-review-genius.md  plan-transcender-alien.md  wave-merge.md  work-review.md
expert-consensus/: README.md  SKILL.md  config.json  expert-panel.json  openrouter.py  panel.json  pyproject.toml
expert-consensus/tests/: test_openrouter.py
skills/expert-consensus/: README.md  SKILL.md  openrouter.py  pyproject.toml
skills/expert-consensus/tests/: test_openrouter.py
skills/openrouter/: SKILL.md
