[project]
name = "expert-consensus"
version = "1.0.0"
description = "Send one prompt to multiple AI models. Get one synthesized answer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["openai>=1.0.0"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
